# RoboticaCognitiva

merlin_prac/: CMakeLists.txt  README  package.xml
merlin_prac/launch/: demo.launch.py
merlin_prac/rsc/: wps.yaml
merlin_prac/scripts/: mision_node.py  nav_action_node.py  pddl.py
yasmin (1)/yasmin_practice_py/: README.txt  package.xml
yasmin (1)/yasmin_practice_py/launch/: marsiNav2Turtlebot3House.launch.xml
yasmin (1)/yasmin_practice_py/rsc/: housePoints.yaml  initPose.yaml
yasmin (1)/yasmin_practice_py/yasmin_practice_py/: ej1_2.py  ejTopics.py  turtlebotNavYasmin.py
